--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
@@ -21,16 +22,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('../data/field_extraction/testing.json', encoding='utf-8')"
+    "df = pd.read_json('../data/field_extraction/ukbb_self-report.json', encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "per = df.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1065.0&1220.0&1142.0'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per['20002']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +86,7 @@
        "      <th></th>\n",
        "      <th>eid</th>\n",
        "      <th>20001</th>\n",
+       "      <th>20002</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -63,29 +94,35 @@
        "      <th>0</th>\n",
        "      <td>1000011</td>\n",
        "      <td></td>\n",
+       "      <td>1065.0&amp;1220.0&amp;1142.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1000026</td>\n",
        "      <td></td>\n",
+       "      <td>1294.0&amp;1138.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1000032</td>\n",
        "      <td>1034.0</td>\n",
+       "      <td>1075.0&amp;1074.0&amp;1081.0&amp;1113.0&amp;1138.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1000044</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1000058</td>\n",
        "      <td></td>\n",
+       "      <td>1065.0&amp;1465.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -93,56 +130,67 @@
        "      <th>95</th>\n",
        "      <td>1000962</td>\n",
        "      <td></td>\n",
+       "      <td>1517.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>1000973</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>1000985</td>\n",
        "      <td></td>\n",
+       "      <td>1264.0&amp;1226.0&amp;1351.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>1000996</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>1001003</td>\n",
        "      <td>1003.0</td>\n",
+       "      <td>1440.0&amp;99999.0&amp;1413.0&amp;99999.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        eid   20001\n",
-       "0   1000011        \n",
-       "1   1000026        \n",
-       "2   1000032  1034.0\n",
-       "3   1000044        \n",
-       "4   1000058        \n",
-       "..      ...     ...\n",
-       "95  1000962        \n",
-       "96  1000973        \n",
-       "97  1000985        \n",
-       "98  1000996        \n",
-       "99  1001003  1003.0\n",
+       "        eid   20001                               20002\n",
+       "0   1000011                        1065.0&1220.0&1142.0\n",
+       "1   1000026                               1294.0&1138.0\n",
+       "2   1000032  1034.0  1075.0&1074.0&1081.0&1113.0&1138.0\n",
+       "3   1000044                                            \n",
+       "4   1000058                               1065.0&1465.0\n",
+       "..      ...     ...                                 ...\n",
+       "95  1000962                                      1517.0\n",
+       "96  1000973                                            \n",
+       "97  1000985                        1264.0&1226.0&1351.0\n",
+       "98  1000996                                            \n",
+       "99  1001003  1003.0       1440.0&99999.0&1413.0&99999.0\n",
        "\n",
-       "[100 rows x 2 columns]"
+       "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "for idx in range(df.shape[0]):\n",
+    "    per = df.iloc[idx]\n",
+    "\n",
+    "    if re.search(r'1074', df['20001']):\n",
+    "        pass\n",
+    "\n",
+    "    pass"
    ]
   },
   {
