--- a/models/processing.ipynb
+++ b/models/processing.ipynb
@@ -15,9 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_43852/3847934707.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0md_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'../../data/features_selection/features_selection_data_dummy_data.txt'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0md_info_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'../../data/features_selection/features_selection_data_dummy_info.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenfromtxt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mdata_info\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md_info_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Type'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'id'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Description'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mE:\\Anaconda\\envs\\TF2.1\\lib\\site-packages\\numpy\\lib\\npyio.py\u001b[0m in \u001b[0;36mgenfromtxt\u001b[1;34m(fname, dtype, comments, delimiter, skip_header, skip_footer, converters, missing_values, filling_values, usecols, names, excludelist, deletechars, replace_space, autostrip, case_sensitive, defaultfmt, unpack, usemask, loose, invalid_raise, max_rows, encoding, like)\u001b[0m\n\u001b[0;32m   2055\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2056\u001b[0m         \u001b[1;31m# Parse each line\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2057\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfirst_line\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfhd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2058\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msplit_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2059\u001b[0m             \u001b[0mnbvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mE:\\Anaconda\\envs\\TF2.1\\lib\\codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m    317\u001b[0m         \u001b[1;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    318\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 319\u001b[1;33m     \u001b[1;32mdef\u001b[0m \u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    320\u001b[0m         \u001b[1;31m# decode input (taking the buffer into account)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    321\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# phenotype data loading\n",
     "d_file = '../../data/features_selection/features_selection_data_dummy_data.txt'\n",
@@ -157,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,31 +183,400 @@
     "    id = str.split(data_info.iloc[idx]['id'], sep='_')[0]\n",
     "    if not data_info.iloc[idx]['Type'] == 'Categorical':\n",
     "        numerical_phenotype_idx.append(idx)\n",
+    "        idx += 1\n",
     "    else:\n",
     "        while k < data_info.shape[0]:\n",
     "            if str.startswith(data_info.iloc[k]['id'], id):\n",
     "                k += 1\n",
-    "        classification_phenotype_idx.append((idx, k+1))"
+    "            else:\n",
+    "                break\n",
+    "        classification_phenotype_idx.append((idx, k))\n",
+    "        idx = k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.randint(0, 5, size=(50, 10))\n",
+    "b = np.random.randint(0, 5, size=(50, 1))\n",
+    "c = np.random.randint(0, 5, size=(50, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20117_1'"
+       "6"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_info.iloc[1]['id']"
+    "from sklearn.model_selection import train_test_split\n",
+    "len(train_test_split(a,b,c, test_size=0.25, random_state=999, shuffle=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = tf.constant(data.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([502505, 261])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([502505])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[:, numerical_phenotype_idx[0]].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tf.random.normal(shape=[2,1], dtype=tf.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 502505), dtype=float64, numpy=array([[10.,  8., 20., ...,  8., 30.,  0.]])>"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reshape(d[:, numerical_phenotype_idx[0]], shape=[1, -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 502505), dtype=float64, numpy=\n",
+       "array([[-20.24654047, -16.19723237, -40.49308093, ..., -16.19723237,\n",
+       "        -60.7396214 ,   0.        ],\n",
+       "       [  0.12628107,   0.10102486,   0.25256214, ...,   0.10102486,\n",
+       "          0.37884321,   0.        ]])>"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(a, tf.reshape(d[:, numerical_phenotype_idx[0]], shape=[1, -1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_x = [d[:, idx] for idx in numerical_phenotype_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(numerical_phenotype_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(numerical_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_x = [d[:, idx_s:idx_e] for (idx_s, idx_e) in classification_phenotype_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([502505, 3])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_x[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(502505,), dtype=float64, numpy=array([10.,  8., 20., ...,  8., 30.,  0.])>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.transpose(d[:, numerical_phenotype_idx[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([502505, 1])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reshape(d[:, numerical_phenotype_idx[0]], shape=(-1, 1)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(502505, 3), dtype=float64, numpy=\n",
+       "array([[0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       ...,\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 1.]])>"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.squeeze(categorical_x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PRS_models import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm = myModel(11, n_categorical_phenotype_feature=[2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prs = PRS_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[0.53796072],\n",
+       "        [0.95599885]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[ 0.26807177],\n",
+       "        [-0.52506593]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[-0.64183402],\n",
+       "        [-0.70885978]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[-0.23523784],\n",
+       "        [ 0.12690197]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[ 0.84075384],\n",
+       "        [-1.73005573]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[0.679603  ],\n",
+       "        [0.17243057]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[2.02928376],\n",
+       "        [0.32181326]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 1) dtype=float64, numpy=\n",
+       " array([[0.87962562],\n",
+       "        [1.74268748]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 2) dtype=float64, numpy=\n",
+       " array([[-0.74027127,  0.74682451],\n",
+       "        [-0.19698095,  0.0233872 ]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 3) dtype=float64, numpy=\n",
+       " array([[-1.33711261, -0.54203457, -1.36113076],\n",
+       "        [ 1.31465599,  1.64765101, -0.80062726]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 4) dtype=float64, numpy=\n",
+       " array([[-0.17551655,  1.23677428,  0.64073753,  0.57076587],\n",
+       "        [ 0.90934936, -0.70744474, -0.3966826 ,  0.70085581]])>,\n",
+       " <tf.Variable 'Variable:0' shape=(2, 11) dtype=float64, numpy=\n",
+       " array([[-0.58021511,  0.03030585,  1.04666906, -0.27137209,  0.72227462,\n",
+       "         -2.93749972,  0.06007293, -0.21238558, -1.13885083, -0.00520229,\n",
+       "         -0.2124298 ],\n",
+       "        [ 0.41250638,  0.95056452, -0.3060988 ,  1.96794118,  1.11221188,\n",
+       "         -0.81823569,  0.16598024,  0.16074331, -0.41138953,  0.4519519 ,\n",
+       "         -1.54494081]])>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.trainable_variables"
    ]
   },
   {
